# Python

./: README.md
AutoPetition/: main.py  names.json  output.json  sufix.json
Bouncing/: bounce.py
Brainstorm/: README.md  brainstorm.txt  class_main.py  function.txt  get_blocks.py  get_functions.py  main.py  main_2.py  testing.txt
Brainstorm/Virtual Machine/: CMakeLists.txt
Brainstorm/Virtual Machine/include/: CPU.h
Brainstorm/Virtual Machine/source/: main.cpp
Coding_challenge/: README (1).md
Coding_challenge/Data Engineering/: Pipfile  README.md  pySpark_solution.py  sample.py  tables.sql  task1.py  task2.py  test.sql
Gen_drift/: bad_main.py  main.py
Genome_finding/: bad_main.py  genome_file.py  main.py  tmp_main.py
Genome_finding/Index/: main.py  sequence.py
Genome_sorting_auto/: automation.py  excel_gen.xlsx  file_read.py  gen.txt  gen_sorting.py  import.py  selen.py  settings.txt  sifre.txt  site.txt
Minesweeper/: floodfill.py  main.py
NXT/: main.py
Neo4J/: CIM_neo4j.py  Neo4J skripte  Reader_Node.py  regexe.py
Neural networks/CNN/: flex_a_fun.py  main.py
Neural networks/Fails/: Perceptron_fail.py
Neural networks/NN1 - Perceptron/: activation_fun.py  neural_net.py  perceptron_tut.py
Neural networks/NN2 - MLPerceptron/: Perceptron.py  Perceptron_NONFIX.py
Neural networks/NN3 - DigitRecognition/: Perceptron.py  Perceptron_FILE.py  activation_fun.py  flex_a_fun.py  (+2 more)
NormalneForme/: data.txt  main.py
Pathfinding/: map.py
SortingVis/: sorting.py
Subclasses/: main.py
TXT_TO_SQL/: main.py  main2.py  table.py  table2.py  tmp.py
(+143 files in other folders)
